@@ -31,7 +31,7 @@ m_gpg_query()
 	| grep -a '^\(pub\|uid\):[^re]:\([^:]*:\)\{7,7\}[^<>:]* <[^<>@: ]*@[^<>@: ]*>[^<>@:]*:' \
 	| sed -e 's/^\([^:]*:\)\{9,9\}\([^<:]*\) <\([^>:]*\)>.*:.*$/\3	\2	(GnuPG)/' \
 	| sed -e 's/	\([^	]\{27,27\}\)[^	]*	/	\1...	/' \
-        | grep -ia "$@"
+        | grep -ia "$@" || :
 
 #	$GPG --list-keys --no-greeting "$@" 2>/dev/null \
 #	| grep -a '^\(pub\|uid\)  .\{25,25\} [^<>]* <[^<>@ ]*@[^<>@ ]*>' \
