@@ -30,5 +30,5 @@ m_inmail_query()
 	export SORT_OUTPUT
 	$libdir/lbdb-munge
 	test -f $m_inmail_db  || return
-	grep -ia "$@." $m_inmail_db
+	grep -ia "$@." $m_inmail_db || :
 }
