@@ -24,5 +24,5 @@ libdir=@libdir@
 
 m_osx_addressbook_query()
 {
-  $libdir/ABQuery "$@" | grep -ia "$@"
+  $libdir/ABQuery "$@" | grep -ia "$@" || :
 }
