@@ -30,5 +30,5 @@ m_palm_query ()
 {
     palmdatabase=${PALM_ADDRESS_DATABASE:-$HOME/.jpilot/AddressDB.pdb}
     test -f $palmdatabase || return
-    $libdir/palm_lsaddr $palmdatabase | grep -ia "$@"
+    $libdir/palm_lsaddr $palmdatabase | grep -ia "$@" || :
 }
