@@ -31,6 +31,6 @@ m_pgp5_query()
 	| grep -a '^uid  ...* <[^<>@:/ ]*@[^<>@ ]*>[^<>@]*$' \
 	| sed -e 's/^uid  \(.*\) <\(.*\)>.*$/\2	\1	(PGP5)/' \
 	| sed -e 's/	\([^	]\{27,27\}\)[^	]*	/	\1...	/' \
-	| grep -ia "$@"
+	| grep -ia "$@" || :
     fi
 }
